Pass explicit parent to QAction ctor, fixes build on Ubuntu Xenial.

Seems like the default of `= nullptr` has been added recently to Qt.

BUG: 376247